--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,11 @@
 	},
 	"require-dev": {
 		"phpstan/phpstan": "^1.10",
-		"phpunit/phpunit": "11.*",
-		"php-mock/php-mock": "^2.5",
 		"squizlabs/php_codesniffer": "^3.8"
 	},
 	"require": {
-		"php": "^8.3"
+		"php": "^8.3",
+		"phpunit/phpunit": "11.*",
+		"php-mock/php-mock": "^2.5"
 	}
 }
