--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,11 @@
 # LF for text type files
 * text=auto eol=lf
+
+/.github         export-ignore
+/test            export-ignore
+.gitattributes   export-ignore
+.gitignore       export-ignore
+.phpcs.xml       export-ignore
+mockutils.iml    export-ignore
+phpstan.neon     export-ignore
+phpunit.xml.dist export-ignore
