--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 
 /.github         export-ignore
 /test            export-ignore
+/tests           export-ignore
 .gitattributes   export-ignore
 .gitignore       export-ignore
 .phpcs.xml       export-ignore
